# ocaml-pfds

./: README.org  dune-project  ocaml-pfds.opam
chapter1/: README.org
chapter2/: README.org  bst_intf.ml  chapter2.ml  custom_stack.ml  dune  exercise2_1.ml  exercise2_2.ml  exercise2_3.ml  exercise2_4.ml  exercise2_5.ml  exercise2_6.ml  list_as_stack.ml  stack_intf.ml  unbalanced_set.ml
chapter3/: README.org  dune  exercise3_1.ml  exercise3_2.ml  exercise3_3.ml  exercise3_4.ml  heap_intf.ml  leftist_heap.ml
lib/: dune  lib.ml
test/: dummy.ml  dune  test.ml
