opam-version: "2.0"
version: "1.0"
maintainer: "arulselvan1234@gmail.com"
authors: ["ArulselvanMadhavan"]
homepage: "https://github.com/ArulselvanMadhavan/ocaml-pfds"
bug-reports: "https://github.com/ArulselvanMadhavan/ocaml-pfds/issues"
dev-repo: "git+https://github.com/ArulselvanMadhavan/ocaml-pfds.git"
license: "MIT"
synopsis: "A short description"
description: "A longer description"
doc: "https://github.com/ArulselvanMadhavan/ocaml-pfds"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "dune" {>= "2.0"}
    "ocaml"
    "ppx_deriving"
    "alcotest" {test}
    "ocamlformat"
]
